testdata/baselines/reference/compiler/tluaNoThis.errors.txt
tluaNoThis.tlua(9,11): error TS1109: Expression expected.
tluaNoThis.tlua(12,11): error TS1109: Expression expected.
tluaNoThis.tlua(12,15): error TS1128: Declaration or statement expected.
tluaNoThis.tlua(12,16): error TS2304: Cannot find name 'foo'.
tluaNoThis.tlua(15,12): error TS1390: 'this' is not allowed as a parameter name.
tluaNoThis.tlua(15,16): error TS1138: Parameter declaration expected.
tluaNoThis.tlua(15,18): error TS7006: Parameter 'number' implicitly has an 'any' type.
tluaNoThis.tlua(19,8): error TS2304: Cannot find name 'this'.
tluaNoThis.tlua(23,10): error TS2304: Cannot find name 'this'.
tluaNoThis.tlua(27,12): error TS2304: Cannot find name 'this'.
tluaNoThis.tlua(27,17): error TS1005: ';' expected.
tluaNoThis.tlua(27,17): error TS2304: Cannot find name 'is'.
tluaNoThis.tlua(27,20): error TS2693: 'Dog' only refers to a type, but is being used as a value here.
tluaNoThis.tlua(28,1): error TS1128: Declaration or statement expected.
tluaNoThis.tlua(34,31): error TS2304: Cannot find name 'asserts'.
tluaNoThis.tlua(34,39): error TS1144: '{' or ';' expected.
tluaNoThis.tlua(34,44): error TS2304: Cannot find name 'is'.
tluaNoThis.tlua(34,44): error TS1228: A type predicate is only allowed in return type position for functions and methods.
tluaNoThis.tlua(34,47): error TS2693: 'Dog' only refers to a type, but is being used as a value here.
tluaNoThis.tlua(38,11): error TS2304: Cannot find name 'ThisType'.
tluaNoThis.tlua(39,12): error TS2304: Cannot find name 'ThisParameterType'.
tluaNoThis.tlua(40,12): error TS2304: Cannot find name 'OmitThisParameter'.
tluaNoThis.tlua(44,18): error TS2304: Cannot find name 'this'.
tluaNoThis.tlua(45,19): error TS2304: Cannot find name 'this'.
tluaNoThis.tlua(47,19): error TS2304: Cannot find name 'this'.


==== tluaNoThis.tlua (25 errors) ====
    // The TypeScript `this` feature is removed from tlua source: Lua methods take
    // an explicit `self` parameter. Each form below decomposes into stock
    // parser-recovery errors (no tlua-specific diagnostic), exactly like the
    // class/array removals. Ordinary `x is T` predicates are unaffected.
    
    declare function use(x: unknown): void;
    
    // `this` is not an expression; a colon method's receiver is named `self`.
    local x = this;
              ~~~~
!!! error TS1109: Expression expected.
    
    // ...nor the base of a property access.
    local y = this.foo;
              ~~~~
!!! error TS1109: Expression expected.
                  ~
!!! error TS1128: Declaration or statement expected.
                   ~~~
!!! error TS2304: Cannot find name 'foo'.
    
    // `this` parameters are gone; write an ordinary parameter instead.
    function f(this: number, a: string) {}
               ~~~~
!!! error TS1390: 'this' is not allowed as a parameter name.
                   ~
!!! error TS1138: Parameter declaration expected.
                     ~~~~~~
!!! error TS7006: Parameter 'number' implicitly has an 'any' type.
    
    // The polymorphic `this` type is gone.
    interface Poly {
      m(): this;
           ~~~~
!!! error TS2304: Cannot find name 'this'.
    }
    
    // `this` in any other type position.
    type T = this;
             ~~~~
!!! error TS2304: Cannot find name 'this'.
    
    // `this is T` predicates are gone (ordinary `x is T` still works).
    interface Animal {
      isDog(): this is Dog;
               ~~~~
!!! error TS2304: Cannot find name 'this'.
                    ~~
!!! error TS1005: ';' expected.
                    ~~
!!! error TS2304: Cannot find name 'is'.
                       ~~~
!!! error TS2693: 'Dog' only refers to a type, but is being used as a value here.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    interface Dog extends Animal {
      bark(): void;
    }
    
    // `asserts this is T` is gone too.
    declare function assertDog(): asserts this is Dog;
                                  ~~~~~~~
!!! error TS2304: Cannot find name 'asserts'.
                                          ~~~~
!!! error TS1144: '{' or ';' expected.
                                               ~~
!!! error TS2304: Cannot find name 'is'.
                                               ~~~
!!! error TS1228: A type predicate is only allowed in return type position for functions and methods.
                                                  ~~~
!!! error TS2693: 'Dog' only refers to a type, but is being used as a value here.
    
    // The `ThisType<T>` marker, `ThisParameterType`, and `OmitThisParameter` are
    // no longer part of the lib.
    type TT = ThisType<number>;
              ~~~~~~~~
!!! error TS2304: Cannot find name 'ThisType'.
    type TPT = ThisParameterType<() => void>;
               ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ThisParameterType'.
    type OTP = OmitThisParameter<() => void>;
               ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'OmitThisParameter'.
    
    // `this` is not a value even in type queries: it resolves like any other
    // unresolvable name instead of typing as the receiver or global environment.
    type TQ = typeof this;
                     ~~~~
!!! error TS2304: Cannot find name 'this'.
    type TQP = typeof this.foo;
                      ~~~~
!!! error TS2304: Cannot find name 'this'.
    function q(self: number) {
      local a: typeof this = self;
                      ~~~~
!!! error TS2304: Cannot find name 'this'.
      use(a);
    }
    
    use(x);
    use(y);
    